--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -100,11 +100,10 @@
 
   "/=================*Footer *=================/": "",
 
-  "footer-menu-title": "Company",
+  "footer-menu-title": "Customer Services",
   "footer-about-us": "About Us",
   "footer-contact-us": "Contact Us",
-  "footer-careers": "Careers",
-  "footer-news": "Latest News",
+  
 
   "footer-top-category": "Top Category",
   "footer-top-category-fish-meat": "Fish & Meat",
@@ -369,7 +368,7 @@
   "privacy-policy-children-information-docs2": "KachaBazar does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.",
 
   "/=================* terms and condition* =================/": "",
-  "terms-condition-welcome": "Welcome to KachaBazar!",
+  "terms-condition-welcome": "Welcome to Karas!",
   "terms-condition-welcome-docs1": "These terms and conditions outline the rules and regulations for the use of KachaBazar's Website, located at https://kachabazar.com/. By accessing this website we assume you accept these terms and conditions. Do not continue to use KachaBazar if you do not agree to take all of the terms and conditions stated on this page.  ",
   "terms-condition-welcome-docs2": "The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: Client, You and Your refers to you, the person log on this website and compliant to the Company’s terms and conditions. The Company, refers to our CompanyPartParties or Us refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same.",
   "terms-condition-cookies": "Cookies",
@@ -400,5 +399,12 @@
   "terms-condition-disclaimer-docs2": "2. limit or exclude our or your liability for fraud or fraudulent misrepresentation;  ",
   "terms-condition-disclaimer-docs3": "3. limit any of our or your liabilities in any way that is not permitted under applicable law; or  ",
   "terms-condition-disclaimer-docs4": "4. exclude any of our or your liabilities that may not be excluded under applicable law.  ",
-  "terms-condition-disclaimer-docs5": "The limitations and prohibitions of liability set in this Section and elsewhere in this disclaimer: (a) are subject to the preceding paragraph; and (b) govern all liabilities arising under the disclaimer, including liabilities arising in contract, in tort and for breach of statutory duty. As long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature."
+  "terms-condition-disclaimer-docs5": "The limitations and prohibitions of liability set in this Section and elsewhere in this disclaimer: (a) are subject to the preceding paragraph; and (b) govern all liabilities arising under the disclaimer, including liabilities arising in contract, in tort and for breach of statutory duty. As long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature.",
+
+  "/=================* New Update * =================/": "",
+  "FREE_RETURN":"Free Returns",
+  "HOW_TO_ORDER":"How to Order"
+
+
+  
 }
