Update Package Description and Carousel Brands

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -407,6 +407,8 @@
   "ABOUT_US":"About Us",
   "ADDRESS_ADMIN":"Karas Galaxy , Planet Earth",
 
+  "BRANDS":"Brands",
+
   "CONTACT_US":"Contact Us",
   "CONTACT_CONTENT":"We are available 24/7, Need help? Call Us ",
   "CALL_US":"Call Us",
