Update Page Facebook Loading

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -489,6 +489,7 @@
   "TABLET":"Tablet",
   "TERM_AND_CONDITION":"Term & Condition",
   "TELL_ADMIN":"0987011701",
+  "TERMS_CONDITION_WEBSITE":"terms-condition-website",
 
   "IMAGE":"Image"
 
