--- a/locales/vi/common.json
+++ b/locales/vi/common.json
@@ -3,24 +3,23 @@
 
   "/=================*Top Menu*=================/": "",
 
-  "HOME": "HOME",
-  "About Us": "About Us",
-  "Products": "Products",
-  "AUTHOR":"Karas",
+  "HOME": "Trang Chủ",
+  "About Us": "Về Chúng tôi",
+  "Products": "Các Sản Phẩm",
  
   "Pages": "Pages",
   "Offers": "Offers",
-  "Categories": "Categories",
-  "Contact Us": "Contact Us",
-  "Privacy Policy": "Privacy Policy",
-  "Terms & Conditions": "Terms & Conditions",
-  "My account": "My account",
-  "Login": "Login",
-  "Call Us": "We are available 24/7, Need help? Call Us :",
+  "Categories": "Thể Loại",
+  "Contact Us": "Liên Lạc Với Chúng Tôi",
+  "Privacy Policy": "Chính Sách Bảo Mật",
+  "Terms & Conditions": "Điều Khoản và Điều Kiện",
+  "My account": "Tài Khoản của tôi",
+  "Login": "Đăng Nhập",
+  "Call Us": "Chúng tôi sẵn sàng hỗ trợ 24/7, Nếu cần giúp đỡ hay liên lạc ",
   "sliderH1": "POS and E-Commerce Website both controlled from a single easy to use Administration Panel",
-  "Ckeckout": "Checkout",
+  "Ckeckout": "Thanh Toán",
 
-  "search-placeholder": "Search for products (e.g. fish, apple, oil)",
+  "search-placeholder": "Tìm Kiếm Sản Phẩm (Ví Dụ. fish, apple, oil)",
 
   "/=================*Top Slider*=================/": "",
 
@@ -39,7 +38,7 @@
   "offer-page": "Offer",
   "checkout-page": "Checkout",
   "faq-page": " FAQ",
-  "about-us-page": " About Us",
+  "about-us-page": " Về Chúng Tôi",
   "contact-us-page": "Contact Us",
   "privacy-policy-page": " Privacy Policy",
   "terms-and-conditions-page": "Terms & Conditions",
