--- a/locales/en/product.json
+++ b/locales/en/product.json
@@ -1,3 +1,7 @@
 {
-    
+    "/=================*SEARCH*=================/": "",
+
+    "/=================*PRODUCT*=================/": "",
+
+    "/=================*CATEGORIES*=================/": ""
 }
