Update Readme Doc

--- a/locales/en/author.json
+++ b/locales/en/author.json
@@ -1,9 +1,12 @@
 {
+    
     "/=================*AUTHOR*=================/": "",
     "AUTHOR":"KARAS",
     "OWNER-NUMBER":"+84 098701****",
     "OWNER-EMAIL":"vannam34760@gmail.com",
-    
+
+    "/=================*ACCOUNT*=================/": "",
+
     "/=================*PAGE*=================/": "",
     "OFFER-PAGE": "Offer",
     "CHECKOUT-PAGE": "Checkout",
