--- a/locales/en/author.json
+++ b/locales/en/author.json
@@ -1,19 +1,54 @@
 {
     
     "/=================*AUTHOR*=================/": "",
-    "AUTHOR":"KARAS",
-    "OWNER-NUMBER":"+84 098701****",
-    "OWNER-EMAIL":"vannam34760@gmail.com",
+    "Author":"KARAS",
+    "Owner-Number":"+84 098701****",
+    "Owner-Email":"vannam34760@gmail.com",
 
     "/=================*ACCOUNT*=================/": "",
 
+    "Personal-Detao;s": "Personal Details",
+    "Name":"Name",
+    "First-Name": "First Name",
+    "Last-Name": "Last Name",
+    "Email-Address": "Email address",
+    "Phone-Number": "Phone Number",
+    "Password":"Password",
+    "Shipping-Detail": "Shipping Details",
+    "Street-Address": "Street address",
+    "City": "City",
+    "Country": "Country",
+    "Zip-Postal": "ZIP / Postal",
+    "Shipping-Cost": "Shipping Cost",
+    "Payment-Method": "Payment Method",
+    "Cash-On-Delivery": "Cash On Delivery",
+    "Credit-Card": "Credit Card",
+    "PayPal": "PayPal",
+
+    "Continue-Shopping": "Continue Shopping",
+    "Confirm-Order": "Confirm Order",
+    "Processing": "Processing",
+
+    "Order-Summary": "Order Summary",
+    "Apply": "Apply",
+    "Coupon-Code": "Input your coupon code",
+    "Subtotal": "Subtotal",
+
+    "Discount": "Discount",
+    "Total-Cost": "TOTAL COST",
+
+    "Shipping-Method": "Shipping Method",
+    "Signing-In":"Signing In",
+    "Signing-Up":"Signing Up",
+    "Create-Account":"Create an account",
+    "Login":"Login",
     "/=================*PAGE*=================/": "",
-    "OFFER-PAGE": "Offer",
-    "CHECKOUT-PAGE": "Checkout",
-    "FAQ-PAGE": " FAQ",
-    "ABOUT-US-PAGE": " About Us",
-    "CONTACT-US-PAGE": "Contact Us",
-    "PRIVACY-POLICY-PAGE": " Privacy Policy",
-    "TERMS-AND-CONDITIONS-PAGE": "Terms & Conditions",
-    "NOT-FOUND-PAGE": "404"
+    "Offer": "Offer",
+    "Checkout": "Checkout",
+    "FAQ": "FAQ",
+    "About-Us": "About Us",
+    "Contact-Us": "Contact Us",
+    "Privacy-Policy": "Privacy Policy",
+    "Terms-&-Conditions": "Terms & Conditions",
+    "Not-Found": "Not Found"
 }
