--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,87 +1,22 @@
 {
-  "Top-Search": "Search for product (e.g. fish, apple, oil)",
-
-  "/=================*Top Menu*=================/": "",
-
-  "HOME": "HOME",
-  "About Us": "About Us",
-  "Products": "Products",
-  "AUTHOR":"Karas",
- 
-  "Pages": "Pages",
-  "Offers": "Offers",
-  "Categories": "Categories",
-  "Contact Us": "Contact Us",
-  "Privacy Policy": "Privacy Policy",
-  "Terms & Conditions": "Terms & Conditions",
-  "My account": "My account",
-  "Login": "Login",
-  "Call Us": "We are available 24/7, Need help? Call Us :",
-  "sliderH1": "POS and E-Commerce Website both controlled from a single easy to use Administration Panel",
-  "Ckeckout": "Checkout",
-
-  "search-placeholder": "Search for products (e.g. fish, apple, oil)",
-
-
   "/=================*Top Slider*=================/": "",
 
-  "SLIDER_1_TITLE": "The Best Quality Products Guaranteed!",
-  "SLIDER_1_DESCRIPTION": "Dramatically facilitate effective total linkage for go forward processes...",
+  "Slider-1-Title": "The Best Quality Products Guaranteed!",
+  "Slider-1-Description": "Dramatically facilitate effective total linkage for go forward processes...",
 
-  "SLIDER_2_TITLE": "Best Different Type of Grocery Store",
-  "SLIDER_2_DESCRIPTION": "Quickly aggregate empowered networks after emerging products...",
+  "Slider-2-Title": "Best Different Type of Grocery Store",
+  "Slider-2-Descriptio": "Quickly aggregate empowered networks after emerging products...",
 
-  "SLIDER_3_TITLE": "Quality Freshness Guaranteed!",
-  "SLIDER_3_DESCRIPTION": "Intrinsicly fashion performance based products rather than accurate benefits...",
+  "Slider-3-Title": "Quality Freshness Guaranteed!",
+  "Slider-3-Description": "Intrinsicly fashion performance based products rather than accurate benefits...",
 
   "/=================*Offer Card*=================/": "",
-  "mega-offer": "Mega Offer",
+  "Mega-Offer": "Mega Offer",
   "OfferCard-Title": "Latest Super Discount Active Coupon Code",
 
-  "/=================*Banner*=================/": "",
 
-  "Banner-title-span-text": "100% Natural Quality",
-  "Banner-title-text": "Organic Porduct",
-  "Banner-paragraph-text": "See Our latest discounted products from here and get a special",
-  "Banner-link-text": "discount product",
-  "Banner-btn-text": "Shop Now",
 
-  "/=================*Featured Categories*=================/": "",
 
-  "Featured-title": "Featured Categories",
-  "Featured-sub-title": "Choose your necessary products from this feature categories.",
-
-  "/=================*popular products*=================/": "",
-
-  "popular-products-title": "Popular Products for Daily Shopping",
-  "popular-products-sub-title": "See all our popular products in this week. You can choose your daily needs products from this list and get some special offer with free shipping.",
-
-  "/=================*promotional banner*=================/": "",
-
-  "promotional-banner-title-span-text": "Organic Products and Food",
-  "promotional-banner-title-text": "Quick Delivery to",
-  "promotional-banner-title-span": "Your Home",
-  "promotional-banner-paragraph-text": " There are many products you will find our shop, Choose your daily necessary product from our Karas shop and get some special offer. See Our latest discounted products from here and get a special discount.",
-  "promotional-banner-link-text": "Download App",
-
-  "/=================*Discounted Products*=================/": "",
-
-  "discounted-products-title": "Latest Discounted Products",
-  "discounted-products-paragraph-text": "See Our latest discounted products below. Choose your daily needs from here and get a special discount with free shipping.",
-
-  "/=================*Feature Promo*=================/": "",
-
-  "featurePromo1-title": "Free Shipping",
-  "featurePromo1-info": "From $500.00",
-
-  "featurePromo2-title": "Support 24/7",
-  "featurePromo2-info": "At Anytime",
-
-  "featurePromo3-title": "Secure Payment",
-  "featurePromo3-info": "Totally Safe",
-
-  "featurePromo4-title": "Latest Offer",
-  "featurePromo4-info": "Upto 20% Off",
 
   "/=================*Footer Top*=================/": "",
 
@@ -195,46 +130,7 @@
   "alreadyHaveAccount": "Already have a account ?",
   "register": "Register",
 
-  "/=================* Signing Up * =================/": "",
 
-  "signingUp": "Signing Up",
-  "createAccount": "Create an account",
-  "name": "Name",
-
-  "items": "Items",
-
-  "/=================* checkout * =================/": "",
-
-  "personalDetails": "Personal Details",
-  "firstName": "First Name",
-  "lastName": "Last Name",
-  "emailAddress": "Email address",
-  "phoneNumber": "Phone Number",
-
-  "shippingDetails": "Shipping Details",
-  "streetAddress": "Street address",
-  "city": "City",
-  "country": "Country",
-  "zIPPostal": "ZIP / Postal",
-  "shippingCost": "Shipping Cost",
-  "paymentDetails": "Payment Method",
-  "cashOnDelivery": "Cash On Delivery",
-  "creditCard": "Credit Card",
-  "payPal": "PayPal",
-
-  "continueShoppingBtn": "Continue Shopping",
-  "confirmOrderBtn": "Confirm Order",
-  "processing": "Processing",
-
-  "orderSummary": "Order Summary",
-  "applyBtn": "Apply",
-  "couponCode": "Input your coupon code",
-  "subtotal": "Subtotal",
-
-  "discount": "Discount",
-  "totalCost": "TOTAL COST",
-
-  "shippingMethod": "Shipping Method",
 
   "/=================* Invoice * =================/": "",
 
