--- a/locales/en/author.json
+++ b/locales/en/author.json
@@ -99,13 +99,12 @@
 
     "/=================* faq* =================/": "",
   "Faq-Title": "Frequently Asked Questions",
-  "Faq-Question1": "How does the Karas work?",
-  "Faq-Question1-Ans": "Yes. You can cancel your subscription anytime. Your subscription will continue to be active until the end of your current term (month or year) but it will not auto-renew. Unless you delete your account manually, your account and all data will be deleted 60 days from the day your subscription becomes inactive.",
+  "Faq-Question1": "How does the Grocecy Store work?",
+  "Faq-Question1-Ans": "The Grocecy Store work like the normal ecomerece website.In our website , we sale many product like to vegetable , fruits ,household .....After you add products which are you want to buy, you can click Checkout product. Our support will get invoice detail and accept if it valid and our Shipper will send its to you",
   "Faq-Question2": "Can I cancel my subscription anytime?",
-  "Faq-Question2-Ans": "Distinctively initiate error-free channels with highly efficient ROI. Intrinsicly envisioneer world-class data via best-of-breed best practices. Efficiently enable empowered e-tailers after cross-unit services. Uniquely expedite seamless e-tailers via cooperative interfaces. Monotonectally myocardinate customer directed meta-services whereas error-free scenarios.",
+  "Faq-Question2-Ans": "Abosolutely Yes. If you decide to cancel your subscription, you have the freedom to do so at any time. Your subscription will remain active until the completion of your current term, whether it is a month or a year, but it will not automatically renew thereafter. However, please note that unless you manually delete your account, all associated data will be permanently removed 60 days from the date your subscription becomes inactive.",
   "Faq-Question3": "Whice payment method you should accept?",
-  "Faq-Question3-Ans": "Holisticly engage sticky niche markets before collaborative collaboration and idea-sharing. Phosfluorescently facilitate parallel applications with unique imperatives. Proactively plagiarize functionalized deliverables via inexpensive solutions. Collaboratively embrace web-enabled infomediaries rather than diverse testing procedures.",
-  "Faq-Question4": "Can I cancel my subscription anytime?",
+  "Faq-Question3-Ans": "We accept common payment methods in many business include credit and debit cards (Visa,Mastercard,ect..). In the next update version in the future. I will update new connect include: mobile wallet(Apple pay , Google pay), bank",
   "Faq-Question4-Ans": "Continually impact seamless imperatives for best-of-breed best practices. Phosfluorescently facilitate parallel applications with unique imperatives. Proactively plagiarize functionalized deliverables via inexpensive solutions. Collaboratively embrace web-enabled infomediaries rather than diverse testing procedures.",
   "Faq-Question5": "What is Karas EC2 auto scaling?",
   "Faq-Question5-Ans": "Continually impact seamless imperatives for best-of-breed best practices. Phosfluorescently facilitate parallel applications with unique imperatives. Proactively plagiarize functionalized deliverables via inexpensive solutions. Collaboratively embrace web-enabled infomediaries rather than diverse testing procedures.",
