Apply Change Translate contact page

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,4 +1,127 @@
 {
+
+    
+    "/=================*AUTHOR*=================/": "",
+    "Author":"KARAS",
+    "Owner-Number":"+84 098701****",
+    "Owner-Email":"vannam34760@gmail.com",
+    "Owner-City":"Ho Chi Minh City",
+    "Owner-Street-Address":"~~~ ",
+    "/=================*ACCOUNT*=================/": "",
+
+    "Personal-Details": "Personal Details",
+    "Name":"Name",
+    "First-Name": "First Name",
+    "Last-Name": "Last Name",
+    "Email-Address": "Email address",
+    "Phone-Number": "Phone Number",
+    "Password":"Password",
+    "Shipping-Detail": "Shipping Details",
+    "Street-Address": "Street address",
+    "City": "City",
+    "Country": "Country",
+    "Zip-Postal": "ZIP / Postal",
+    "Shipping-Cost": "Shipping Cost",
+
+    "Photo": "Photo",
+    "Your-Address": "Your Address",
+    "Phone-Mobile": "Phone/Mobile",
+    "Your-Mobile": "Your Mobile Number",
+    
+    "Drag-Your-Image-Here": "Drag your image here",
+    "Current-Password": "Current Password",
+    "Your-Current-Password": "Your Current Password",
+    "New-Password": "New Password",
+    "Your-New-Password": "Your New Password",
+  
+
+    "Shipping-Method": "Shipping Method",
+    "Signing-In":"Signing In",
+    "Signing-Up":"Signing Up",
+    "Create-Account":"Create an account",
+    "Login":"Login",
+    "Login-Box-Text":"Login with your email and password",
+    "Forgot-Password":"Forgot Password",
+    "Not-Account":"Not have a account ?",
+    "Register":"Register",
+    "Or":"or",
+    "Already-Account":"Have already account",
+    "Logout":"Logout",
+
+    "Dashboard": "Dashboard",
+    "Dashboard-Text": "This is User Dashboard",
+    "My-Orders": "My Orders",
+    "Update-Profile": "Update Profile",
+    "Change-Password": "Change Password",
+    
+
+    "No-Order": "You Have no order Yet!",
+
+    "/=================*PAGE*=================/": "",
+    "Offer": "Offer",
+    "Checkout": "Checkout",
+    "FAQ": "FAQ",
+
+    "/=================* About Us* =================/": "",
+    "About-Us": "About Us",
+    "About-Section-Title":"Welcome to our Grocecy",
+    "About-Section-Top-P1": "Holisticly seize parallel metrics and functional ROI.Seamlessly revolutionize error-free internal or organic sources before effective scenarios. Progressively incentivize state of the art applications for efficient intellectual capital. Credibly leverage existing distinctive mindshare through cutting-edge schemas. Proactively procrastinate team building paradigms coordinate client-centric total transparent internal.",
+    "About-Section-Top-P2": "Dynamically embrace diverse customer service and installed base paradigms. Credibly seize enterprise-wide experiences for end-to-end data. Professionally brand flexible alignments and cost effective architectures. Enthusiastically incentivize seamless communities with seamlessly facilitate revolutionary metrics with strategic theme areas.",
+    "About-Section-Top-P3": "Holisticly seize parallel metrics and functional ROI. Seamlessly revolutionize error-free internal or organic sources before effective scenarios. Progressively incentivize state of the art applications for efficient intellectual capital. Credibly leverage existing distinctive mindshare through cutting-edge schemas. Proactively procrastinate team building paradigms coordinate client-centric total transparent internal. Energistically reconceptualize global leadership for high-quality networks. Credibly restore an expanded array of systems rather than accurate results. Collaboratively synergize backend bandwidth without 24/7 functionalities. Credibly utilize proactive ideas whereas cross-media core competencies. Uniquely maximize professional best practices through resource maximizing services. Conveniently architect cross-unit web services for e-business imperatives.",
+    "About-Section-Top-P4": "Appropriately visualize market-driven data before one-to-one scenarios. Collaboratively productize multifunctional ROI through intuitive supply chains. Enthusiastically seize revolutionary value and process-centric services. Competently harness intuitive information after interoperable markets. Interactively revolutionize future-proof value before granular sources. Dynamically embrace diverse customer service and installed base paradigms. Credibly seize enterprise-wide experiences for end-to-end data. Professionally brand flexible alignments and cost effective architectures. Enthusiastically incentivize seamless communities with seamlessly facilitate revolutionary metrics with strategic theme areas.",
+      
+    "About-Listed-Products-Box-Title": "Listed Products",
+    "About-Listed-Products-Box-Text": "Dynamically morph team driven partnerships after vertical.",
+    "About-Customer-Box-Title": "Lovely Customer",
+    "About-Customers-Box-Text": "Competently productize virtual models without performance.",
+    "About-Our-Founder-Title": "Our Founder",
+    "About-Our-Founder-Description": "We’re impartial and independent, and every day we create distinctive, world-class reintermediate backend supply programmes.",
+    "Co-Founder-Executive": "Co-founder & Executive",
+    "Chief-Executive": "Chief Executive",
+    "Co-Founder-Chairman": "Co-founder, Chairman",
+    "chief-strategy-officer": "Chief Strategy Officer",
+    "Hr-Officer": "HR Officer",
+    "lead-developer": "Lead Developer",
+
+    "Contact-Us": "Contact Us",
+    "Privacy-Policy": "Privacy Policy",
+    "Terms-&-Conditions": "Terms & Conditions",
+
+    "Not-Found": "Not Found",
+    "Page-Not-Found-Title":"Page is not found!",
+    "Page-Not-Found-Description":"Sorry! This page is not found! Please try again later",
+    "/=================*Button*=================/": "",
+    "Back-To-Home":"Back to Home",
+    "Shop-Now": "Shop Now",
+    "Continue-Shopping": "Continue Shopping",
+    "Next":"Next",
+    "Previous":"Previosus",
+    "Action":"Action",
+    "Load-More": "Load More",
+    "Items-Found":"Items Found",
+    "Sort-By-Price":"Sort By Price",
+    "Low-To-High":"Low To High",
+    "High-To-Low":"High To Low",
+    "Sorry-Text":"Sorry, We can not find this products",
+
+    "/=================* faq* =================/": "",
+  "Faq-Title": "Frequently Asked Questions",
+  "Faq-Question1": "How does the Grocecy Store work?",
+  "Faq-Question1-Ans": "The Grocecy Store work like the normal ecomerece website.In our website , we sale many product like to vegetable , fruits ,household .....After you add products which are you want to buy, you can click Checkout product. Our support will get invoice detail and accept if it valid and our Shipper will send its to you",
+  "Faq-Question2": "Can I cancel my subscription anytime?",
+  "Faq-Question2-Ans": "Abosolutely Yes. If you decide to cancel your subscription, you have the freedom to do so at any time. Your subscription will remain active until the completion of your current term, whether it is a month or a year, but it will not automatically renew thereafter. However, please note that unless you manually delete your account, all associated data will be permanently removed 60 days from the date your subscription becomes inactive.",
+  "Faq-Question3": "Whice payment method you should accept?",
+  "Faq-Question3-Ans": "We accept common payment methods in many business include credit and debit cards (Visa,Mastercard,ect..). In the next update version in the future. I will update new connect include: mobile wallet(Apple pay , Google pay), bank",
+  "Faq-Question4-Ans": "Continually impact seamless imperatives for best-of-breed best practices. Phosfluorescently facilitate parallel applications with unique imperatives. Proactively plagiarize functionalized deliverables via inexpensive solutions. Collaboratively embrace web-enabled infomediaries rather than diverse testing procedures.",
+  "Faq-Question5": "What is Karas EC2 auto scaling?",
+  "Faq-Question5-Ans": "Continually impact seamless imperatives for best-of-breed best practices. Phosfluorescently facilitate parallel applications with unique imperatives. Proactively plagiarize functionalized deliverables via inexpensive solutions. Collaboratively embrace web-enabled infomediaries rather than diverse testing procedures.",
+  "Faq-Question6": "What are the benefits of using Karas affliate?",
+  "Faq-Question6-Ans": "Continually impact seamless imperatives for best-of-breed best practices. Phosfluorescently facilitate parallel applications with unique imperatives. Proactively plagiarize functionalized deliverables via inexpensive solutions. Collaboratively embrace web-enabled infomediaries rather than diverse testing procedures.",
+  "Faq-Question7": "What is a affliates product configuration?",
+  "Faq-Question7-Ans": "Yes. You can cancel your subscription anytime. Your subscription will continue to be active until the end of your current term (month or year) but it will not auto-renew. Unless you delete your account manually, your account and all data will be deleted 60 days from the day your subscription becomes inactive.",
+  "Faq-Question8": "What is fleet management and how is it different from dynamic scaling?",
+  "Faq-Question8-Ans": "Distinctively initiate error-free channels with highly efficient ROI. Intrinsicly envisioneer world-class data via best-of-breed best practices. Efficiently enable empowered e-tailers after cross-unit services. Uniquely expedite seamless e-tailers via cooperative interfaces. Monotonectally myocardinate customer directed meta-services whereas error-free scenarios.",
+  
   "/=================*Top Slider*=================/": "",
 
   "Slider-1-Title": "The Best Quality Products Guaranteed!",
@@ -139,7 +262,88 @@
   "Terms-Condition-Disclaimer-Docs2": "2. limit or exclude our or your liability for fraud or fraudulent misrepresentation;  ",
   "Terms-Condition-Disclaimer-Docs3": "3. limit any of our or your liabilities in any way that is not permitted under applicable law; or  ",
   "Terms-Condition-Disclaimer-Docs4": "4. exclude any of our or your liabilities that may not be excluded under applicable law.  ",
-  "Terms-Condition-Disclaimer-Docs5": "The limitations and prohibitions of liability set in this Section and elsewhere in this disclaimer: (a) are subject to the preceding paragraph; and (b) govern all liabilities arising under the disclaimer, including liabilities arising in contract, in tort and for breach of statutory duty. As long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature."
+  "Terms-Condition-Disclaimer-Docs5": "The limitations and prohibitions of liability set in this Section and elsewhere in this disclaimer: (a) are subject to the preceding paragraph; and (b) govern all liabilities arising under the disclaimer, including liabilities arising in contract, in tort and for breach of statutory duty. As long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature.",
+  "Items":"Items",
+  "/=================*Featured Categories*=================/": "",
+  "Featured-Title": "Featured Categories",
+  "Featured-Sub-Title": "Choose your necessary products from this feature categories.",
+
+  "/=================*popular products*=================/": "",
+  "Popular-Products-Title": "Popular Products for Daily Shopping",
+  "Popular-Products-Sub-Title": "See all our popular products in this week. You can choose your daily needs products from this list and get some special offer with free shipping.",
+
+  "/=================*promotional banner*=================/": "",
+  "Promotional-banner-title": "Organic Products and Food",
+  "Promotional-Banner-Title1": "Quick Delivery to",
+  "Promotional-Banner-Title2": "Your Home",
+  "Promotional-Banner-Description": " There are many products you will find our shop, Choose your daily necessary product from our Karas shop and get some special offer. See Our latest discounted products from here and get a special discount.",
+  "Promotional-Banner-Link-Text": "Download App",
+
+  "/=================*Discounted Products*=================/": "",
+  "Discounted-Products-Title": "Latest Discounted Products",
+  "Discounted-Products-Description": "See Our latest discounted products below. Choose your daily needs from here and get a special discount with free shipping.",
+
+  "/=================*Feature Promo*=================/": "",
+  "Feature-Promo1-Title": "Free Shipping",
+  "Feature-Promo1-Sub-Title": "From $500.00",
+
+  "Feature-Promo2-Title": "Support 24/7",
+  "Feature-Promo2-Sub-Title": "At Anytime",
+
+  "Feature-Promo3-Title": "Secure Payment",
+  "Feature-Promo3-Sub-Title": "Totally Safe",
+
+  "Feature-Promo4-Title": "Latest Offer",
+  "Feature-Promo4-Sub-Title": "Upto 20% Off",
+  "/=================*SHOP - PAYMENT- Order*=================/": "",
+  "Payment-Method": "Payment Method",
+  "Cash-On-Delivery": "Cash On Delivery",
+  "Credit-Card": "Credit Card",
+  "PayPal": "PayPal",
+
+  
+  "Confirm-Order": "Confirm Order",
+  "Processing": "Processing",
+
+  "Order-Summary": "Order Summary",
+  "Apply": "Apply",
+  "Coupon-Code": "Input your coupon code",
+  "Subtotal": "Subtotal",
+
+  "Discount": "Discount",
+  "Total-Cost": "TOTAL COST",
+
+  "Method":"Method",
+  "Oder-Time": "ORDERTIME",
+  "Status":"Status",
+  "Total": "TOTAL",
+  "Details": "Details",
+  "Tota-lOrder": "Total Order",
+  "Pending-Order": "Pending Order",
+  "Processing-Order": "Processing Order",
+  "Complete-Order": "Complete Order",
+
+  "Recent-Order": "Recent Order",
+  "More-Info": "More Info",
+  "Show-Less": "Show Less",
+  "Stock-Out": "Stock Out",
+  "In-Stock": "In Stock",
+  "Add-To-Cart": "Add to Cart",
+  "Category": "Category",
+  "Share-Your-Social": "Share your social network",
+  "Share-Your-Social-Text": "For get lots of traffic from social network share this product",
+  "Related-Products": "Related Products",
+  "Stock": "Stock",
+
+  "Shopping-Cart-Drawer-Title": "Shopping Cart",
+  "CloseBtn": "Close",
+  "Cart-Empty-Title": "Your cart is empty",
+  "Cart-Empty-Text": " No items added in your cart. Please add product to your cart list.",
+  "Proceed-To-Checkout": "Proceed To Checkout",
+
+  "/=================*SEARCH*=================/": "",
+  "Search-Placeholder":"Search for products (e.g. fish, apple, oil)",
+  "Top-Search": "Search for product (e.g. fish, apple, oil)"
 
  
 
